kubernetes/learning/projects/argocd/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: argocd
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: argocd.doomain.ir
      http:
        paths:
          - path: /*
            backend:
              serviceName: argocd-server
              servicePort: 8080
          - path: /.*
            backend:
              serviceName: argocd-server
              servicePort: 8080
